<resources>
    <string name="app_name">tictactoe</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="chose">Choose your Variable:</string>
    <string name="o">O</string>
    <string name="x">X</string>
    <string name="dash">-</string>
    <string name="newG">New Game</string>
    <string name="splsh_cntnt">TicTacToe</string>
    <string name="splsh_imgVw">Splash screen icon</string>
    <string name="plrVsPlr">Player Vs Player</string>
    <string name="plrVsBot">Player Vs Computer</string>
    <string name="imgDescription">Just an attractive image</string>
    <string name="history">History</string>
</resources>